--- a/public/log-in-style.css
+++ b/public/log-in-style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
-    background-image: url('/images/joy.jpg');
+    background-image: url('/assets/joy.jpg');
     background-size: cover;
     background-repeat: no-repeat;
 }
