--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,7 @@
             <div class="title pb-5">
                 <h2 class="font-weight-bold">Log In</h2>
                 <% if(locals.failed){ %>
-                    <div class="alter alert-warning text-center">
+                    <div class="alert alert-warning text-center">
                         <%= failed %>
                     </div>
                 <% } %>
