--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -1,52 +1,22 @@
 <%- include('header') -%>
 
-<section class="portfolio">
-    <div class="aboutus-title">
-        <h1>OUR TEAM</h1>
+<section>
+    <div class="container aboutus-title">
+        <h1>About Gaming IRL</h1>
     </div>
 
-    <figure class="port-item">
-        <img src="/assets/lion.jpg" alt="portfolio item" >
-        <figcaption class="port-desc">
-            <a href="" class="button button-accent button-small">Varun Varadarajan</a>
-        </figcaption>
-    </figure>
-
-    <figure class="port-item">
-        <img src="/assets/panda.jpg" alt="team">
-        <figcaption class="port-desc">
-            <a href="" class="button button-accent button-small">Justin Guo</a>
-        </figcaption>
-    </figure>
-
-    <figure class="port-item">
-        <img src="/assets/penguins.jpg" alt="team">
-        <figcaption class="port-desc">
-            <a href="" class="button button-accent button-small">Alisha Fariz</a>
-        </figcaption>
-    </figure>
-
-    <figure class="port-item">
-        <img src="/assets/racoon.jpg" alt="team">
-        <figcaption class="port-desc">
-            <a href="" class="button button-accent button-small">Max Wang</a>
-        </figcaption>
-    </figure>
-
-    <figure class="port-item">
-        <img src="/assets/bunny.jpg" alt="portfolio item" >
-        <figcaption class="port-desc">
-            <a href="" class="button button-accent button-small">Ugo Obadiah</a>
-        </figcaption>
-    </figure>
-
-    <figure class="port-item">
-        <img src="/assets/fox.jpg" alt="portfolio item" >
-        <figcaption class="port-desc">
-            <a href="" class="button button-accent button-small">Elias Fariz</a>
-        </figcaption>
-    </figure>
-
+    <div class="container aboutus-desc">
+        <div class="aboutus-desc-text">
+            <h3>The Beginnings</h3>
+            <p>
+                As a program, Gaming IRL is designed to help students learn the fundamental soft skills needed to traverse the workplace with ease through 
+                popular team-based video games such as League of Legends and Rocket League. Students get teh opportunity to be coached not just in gameplay 
+                but also in skills like communication, teamwork, and leadership. 
+                Originally a brain child of our founder, Alisha Fariz, the program took off as it caught the attention of the local university (UNCW) and
+                ran its first pilot during the summer of 2021.
+            </p>
+        </div>
+    </div>
 </section>
 
 <%- include('footer') -%>
