--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,6 +5,8 @@
         <h3>Welcome to Gaming IRL Dashboard</h3>
         <h5><%= locals.user ? user:"User" %></h5>
         <a href="/route/logout">Logout</a>
+        <p>or</p>
+        <a href="/route/destroy">Delete Account</a>
     </div>
 </div>
 
