--- a/views/skills.ejs
+++ b/views/skills.ejs
@@ -1,30 +1,155 @@
 <%- include('header') -%>
 
-<section class="skills">
-    <div class="">
+<section class="softskills">
+    <div class="skill-title">
         <h1>Soft Skills</h1>
+        <div class="skill-desc">
+            <p>
+                Soft skills and video games might not seem to be related but they are, in fact, very closely linked. 
+            </p>
+            <p>
+                Go through each of the soft skills below and see how they are linked to video games.
+            </p>
+        </div>
+    </div>
+    <div class="skills">
+    <div class="container skill-div">
+        <p style="float: left">
+            <img src="/assets/positive.jpg" height="300px" width="300px" border="1px" alt="skill">
+        </p>
+        <div class="skill-text">
+            <h3>Positive Mentality</h3>
+            <p>
+                Positive mentality is absolutely vital to performing well in both video games and in the work place. Having a positive mentialy allows
+                one to view situations in a more optimistic light and approach problems with more enthusiasm. It also helps when encountering difficulites
+                or obstacles that might hinder the accomplishemnt of a goal, whether that is in the workplace or in a game.
+                <a href=""><strong>Learn more</strong></a>
+            </p>
+        </div>
     </div>
 
-    <span>
-        <ul style="list-style-type: none; display: inline-block;">
-            <li><strong>Week 1</strong></li>
-            <li><a href="">Positive Mentality</a></li>
-            <li><a href="">Problem Solving/Critical Thinking</a></li>
-            <li><a href="">Communication/Active Listening</a></li>
-            <li><a href="">Teamwork/Collaboration</a></li>
-            <li><a href="">Sportsmanship/Flexibility</a></li>
-        </ul>
+    <div class="container skill-div" style="clear: left;">
+        <p style="float: left">
+            <img src="/assets/critical.jpg" height="300px" width="300px" border="1px" alt="skill">
+        </p>
+        <div class="skill-text">
+            <h3>Problem Solving/Critical Thinking</h3>
+            <p>
+                Problem solving and critical thinking are similar soft skills that require clear thinking and reasoning to 
+                be properly utilized. Both can help in overcoming difficulties and finding solutions. Whether used to accomplish the task your boss assigned
+                you or the mission the game issued you, problem solving and critical thinking are absolutely needed.
+                <a href=""><strong>Learn more</strong></a>
+            </p>
+        </div>
+    </div>
 
-        <ul style="list-style-type: none; display: inline-block;">
-            <li><strong>Week 2</strong></li>
-            <li><a href="">Empathy</a></li>
-            <li><a href="">Leadership</a></li>
-            <li><a href="">Self-Confidence</a></li>
-            <li><a href="">Time Management</a></li>
-            <li>-</li>
-        </ul>
-    </span>
+    <div class="container skill-div" style="clear: left;">
+        <p style="float: left">
+            <img src="/assets/communication.jpg" height="300px" width="300px" border="1px" alt="skill">
+        </p>
+        <div class="skill-text">
+            <h3>Communication/Active Listening</h3>
+            <p>
+                Communication is absolutely vital. Good communcation and communication skills can allow
+                for more efficient work and significantly decreases the chances of misunderstandings. Communication bewteen co-workers can make the difference
+                bewteen a job well done and being fired. Active listening is a the receiving portion of communication and is equally important. Both skills
+                can be practiced frequently with teammates in team-based video games.
+                <a href=""><strong>Learn more</strong></a>
+            </p>
+        </div>
+    </div>
 
+    <div class="container skill-div" style="clear: left;">
+        <p style="float: left">
+            <img src="/assets/teamwork.jpg" width="300px" height="300px" border="1px" alt="skill">
+        </p>
+        <div class="skill-text">
+            <h3>Teamwork/Collaboration</h3>
+            <p>
+                Teamwork and collaboration are needed in every situation and every scenario involving teams. Without teamwork and collaboration, teammates
+                are more likely to be a burden than a help. Good teamwork can make tasks be accomplished faster, easier, and more accurately while poor teamwork
+                can cripple a team. Teamwork skills can be practiced in video games as practice makes perfect and team-based video games provide perfect practice.
+                <a href=""><strong>Learn more</strong></a>
+            </p>
+        </div>
+    </div>
+
+    <div class="container skill-div" style="clear: left;">
+        <p style="float: left">
+            <img src="/assets/sports.jpg" height="300px" width="300px" border="1px" alt="skill">
+        </p>
+        <div class="skill-text">
+            <h3>Sportsmanship/Flexibility</h3>
+            <p>
+                Sportsmanship is less of a skill that improves your ability to do work and more of a skill that improves your relations with others, be it 
+                teammates or co-workers. Having good sportsmanship and flexibity will allow for a greater chance of others enjoying working or playing with you.
+                It also helps improve positive mentality and teamwork.
+                <a href=""><strong>Learn more</strong></a>
+            </p>
+        </div>
+    </div>
+
+    <div class="container skill-div" style="clear: left;">
+        <p style="float: left">
+            <img src="/assets/empathy.jpg" height="300px" width="300px" border="1px" alt="skill">
+        </p>
+        <div class="skill-text">
+            <h3>Empathy</h3>
+            <p>
+                Empathy is important in understanding others and creating strong, lasting bonds.  It helps to improve the relations between teammates or 
+                co-workers in the video game or the work environment. Empathy helps with positive mentality, teanwork, and even communciaiton. It 
+                is a supporting soft skill that is necessary to know and learn.
+                <a href=""><strong>Learn more</strong></a>
+            </p>
+        </div>
+    </div>
+
+    <div class="container skill-div" style="clear: left;">
+        <p style="float: left">
+            <img src="/assets/lead.jpg" height="300px" width="300px" border="1px" alt="skill">
+        </p>
+        <div class="skill-text">
+            <h3>Leadership</h3>
+            <p>
+                Leadership skills are well-known and much sought after in individuals. Many colleges and corporations seek out individuals with 
+                prominent leadership skills and experience. Video games can help provide some of htat leadership expereince as leading a group of strangers
+                to a win against another group of equally skilled players is challenging. Constantly acting as a leader within video games can help improve leadership 
+                skills and qualities in real life.
+                <a href=""><strong>Learn more</strong></a>
+            </p>
+        </div>
+    </div>
+
+    <div class="container skill-div" style="clear: left;">
+        <p style="float: left">
+            <img src="/assets/self.jpg" height="300px" width="300px" border="1px" alt="skill">
+        </p>
+        <div class="skill-text">
+            <h3>Self-Confidence</h3>
+            <p>
+                Positive mentality is absolutely vital to performing well in both video games and in the work place. Having a positive mentialy allows
+                one to view situations in a more optimistic light and approach problems with more enthusiasm. It also helps when encountering difficulites
+                or obstacles that might hinder the accomplishemnt of a goal. 
+                <a href=""><strong>Learn more</strong></a>
+            </p>
+        </div>
+    </div>
+
+    <div class="container skill-div" style="clear: left;">
+        <p style="float: left">
+            <img src="/assets/time.jpg" height="300px" width="300px" border="1px" alt="skill">
+        </p>
+        <div class="skill-text">
+            <h3>Time Management</h3>
+            <p>
+                Positive mentality is absolutely vital to performing well in both video games and in the work place. Having a positive mentialy allows
+                one to view situations in a more optimistic light and approach problems with more enthusiasm. It also helps when encountering difficulites
+                or obstacles that might hinder the accomplishemnt of a goal. 
+                <a href=""><strong>Learn more</strong></a>
+            </p>
+        </div>
+    </div>
+    </div>
 
 </section>
 
