--- a/public/dropdown.css
+++ b/public/dropdown.css
@@ -1,16 +1,18 @@
 .dropbtn {
     background-color: white;
-    color: black;
-    padding: 16px;
-    font-size: 16px;
-    font-weight: 1000;
     border: none;
     cursor: pointer;
+
+    font-weight: 900;
+    text-decoration: none;
+    font-size: 1rem;
+    padding: .5em;
+    color:black;
 }
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover {
-background-color: grey;
+color: #ddd;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -23,7 +25,7 @@ display: inline-block;
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: white;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -39,7 +41,7 @@ display: block;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd; color: white;}
+.dropdown-content a:hover {color: #ddd;}
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
