--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,36 +3,46 @@
     <head>
         <meta charset="UTF-8">
         <title>Gaming Irl</title>
-        <link rel="stylesheet" href="../log-in-style.css" type="text/css">
+        <link rel="stylesheet" href="/static/log-in-style.css" type="text/css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     </head>
     
 <body>
         
     <header>
-        <a href="/"><img src="../images/gaming.jpg" alt="GIRL Logo" class="logo"></a>
-        <a href="/"><img src="../images/irl.jpg" alt="GIRL Logo" class="logo"></a>
-
+        <a href="/"><img src="/assets/girl.jpg" alt="GIRL Logo" class="logo"></a>
     </header>
 
     <div class="text-center center-div" id="login">
         <div class="container w-25 border py-5 white">
-            <div class="title pb-5">
-                <h2 class="font-weight-bold">Log In</h2>
+            <div class="title pb-5 title-close">
+                <h2 class="font-weight-bold">Register</h2>
+                <% if(locals.failed){ %>
+                    <div class="alert alert-warning text-center">
+                        <%= failed %>
+                    </div>
+                <% } %>
             </div>
 
-            <form action="/route/account" method="POST" class="pt-3">
+            <form action="/route/registration" method="POST" class="pt-0">
+                <div class="form-group">
+                    <input type="name" class="form-control" placeholder="Name" name="name">
+                </div>
+
                 <div class="form-group">
                     <input type="email" class="form-control" placeholder="Email" name="email">
                 </div>
 
                 <div class="form-group">
+                    <input type="phone" class="form-control" name="phone" placeholder="Phone">
+                </div>
+
+                <div class="form-group">
                     <input type="password" class="form-control" name="password" placeholder="Password">
-                    <small class="form-text text-muted text-left"><a href="">Forgot password?</a></small>
                 </div>
                 
                 <div class="form-group">
-                    <small class="form-text text-muted text-left">Don't have an account? <a href="">Register</a></small>
+                    <small class="form-text text-muted text-left">Already have an account? <a href="/login">Log In</a></small>
                 </div>
 
                 <button type="submit" class="btn btn-success">Submit</button>
