--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -10,10 +10,23 @@
             <h3>The Beginnings</h3>
             <p>
                 As a program, Gaming IRL is designed to help students learn the fundamental soft skills needed to traverse the workplace with ease through 
-                popular team-based video games such as League of Legends and Rocket League. Students get teh opportunity to be coached not just in gameplay 
+                popular team-based video games such as League of Legends and Rocket League. Students get the opportunity to be coached not just in gameplay 
                 but also in skills like communication, teamwork, and leadership. 
                 Originally a brain child of our founder, Alisha Fariz, the program took off as it caught the attention of the local university (UNCW) and
                 ran its first pilot during the summer of 2021.
+            </p>
+        </div>
+    </div>
+
+    <div class="container aboutus-prog">
+        <div class="aboutus-prog-text">
+            <h3>Video Games to Soft Skills</h3>
+            <p>
+                Video games, like Rocket League and League of Legends, provide a perfect field for students to consistently
+                practice skills like teamwork and communication whiel having a fun time doing it. With guidance from professionals,
+                students can improve the skills that are necessary in college and beyond. Each day in our program will start out with an introduction to
+                the day's topic, such as a soft skill. They will learn about the skill and how to use it efficiently before transitioning to gaming, where
+                students will put what they just learned to practical use. 
             </p>
         </div>
     </div>
