--- a/views/sendemail.ejs
+++ b/views/sendemail.ejs
@@ -16,29 +16,20 @@
     <div class="text-center center-div" id="login">
         <div class="container w-25 border py-5 white">
             <div class="title pb-5 title-close">
-                <h2 class="font-weight-bold">Log In</h2>
-                <% if(locals.failed){ %>
-                    <div class="alert alert-warning text-center">
-                        <%= failed %>
-                    </div>
-                <% } %>
+                <h2 class="font-weight-bold">Reset Password</h2>
+                <p>An email will be sent to the given email with a link to reset your password</p>
             </div>
 
-            <form action="/route/account" method="POST" class="pt-0">
+            <form action="/route/confirm" method="POST" class="pt-0">
                 <div class="form-group">
                     <input type="email" class="form-control" placeholder="Email" name="email">
                 </div>
-
-                <div class="form-group">
-                    <input type="password" class="form-control" name="password" placeholder="Password">
-                    <small class="form-text text-muted text-left"><a href="/sendemail">Forgot password?</a></small>
-                </div>
                 
                 <div class="form-group">
-                    <small class="form-text text-muted text-left">Don't have an account? <a href="/register">Register</a></small>
+                    <small class="form-text text-muted text-left">Remember your password? <a href="/login">Log In</a></small>
                 </div>
 
-                <button type="submit" class="btn btn-success">Submit</button>
+                <button type="submit" class="btn btn-success">Send Email</button>
             </form>
         </div>
     </div>
