--- a/views/resetpass.ejs
+++ b/views/resetpass.ejs
@@ -17,7 +17,6 @@
         <div class="container w-25 border py-5 white">
             <div class="title pb-5 title-close">
                 <h2 class="font-weight-bold">Reset Password</h2>
-                <p>An email will be sent to the given email with a link to reset your password</p>
                 <% if(locals.failed){ %>
                     <div class="alert alert-warning text-center">
                         <%= failed %>
@@ -25,16 +24,16 @@
                 <% } %>
             </div>
 
-            <form action="/route/confirm" method="POST" class="pt-0">
+            <form action='<%= link %>' method="POST" class="pt-0">
                 <div class="form-group">
-                    <input type="email" class="form-control" placeholder="Email" name="email">
-                </div>
-                
-                <div class="form-group">
-                    <small class="form-text text-muted text-left">Remember your password? <a href="/login">Log In</a></small>
+                    <input type="password" class="form-control" placeholder="New Password" name="firstpass">
                 </div>
 
-                <button type="submit" class="btn btn-success">Send Email</button>
+                <div class="form-group">
+                    <input type="password" class="form-control" placeholder="Confirm Password" name="secondpass">
+                </div>
+
+                <button type="submit" class="btn btn-success">Submit</button>
             </form>
         </div>
     </div>
